--- a/funnel/static/sass/_project.scss
+++ b/funnel/static/sass/_project.scss
@@ -9,6 +9,7 @@
   .project-banner__profile-details {
     display: flex;
     align-items: center;
+    margin-bottom: 4px;
 
     .project-banner__profile-details__logo-wrapper {
       display: inline-block;
@@ -33,6 +34,9 @@
 
   .project-banner__headline {
     margin-bottom: $mui-grid-padding;
+    .project-banner__headline__title {
+      margin-bottom: 6px;
+    }
   }
   .livestream-box {
     margin: 0;
